find_program(CCACHE_PROGRAM ccache)
if(CCACHE_PROGRAM)
  message(STATUS "Set up ccache ...")
  set_property(GLOBAL PROPERTY RULE_LAUNCH_COMPILE ccache)
  set_property(GLOBAL PROPERTY RULE_LAUNCH_LINK ccache)
endif()
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

include(tidy_folder)

#file(GLOB SUBDIRS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/*)
#foreach(subdir ${SUBDIRS})
#    if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/${subdir}/CMakeLists.txt)
#        add_subdirectory(${subdir})
#    endif()
#endforeach()
add_subdirectory(Applications)	
add_subdirectory(Modules)	

file(GLOB SUBDIRS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR}/Plugins ${CMAKE_CURRENT_SOURCE_DIR}/Plugins/*)
foreach(subdir ${SUBDIRS})
    if(IS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Plugins/${subdir} AND  EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/Plugins/${subdir}/CMakeLists.txt)
        option(DicomViewer_BuildPlugins_${subdir} "Build ${child}" OFF)
        mark_as_advanced(DicomViewer_BuildPlugins_${subdir})
    endif()
endforeach()
add_subdirectory(Plugins)	

file(GLOB SUBDIRS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR}/Examples ${CMAKE_CURRENT_SOURCE_DIR}/Examples/*)
foreach(subdir ${SUBDIRS})
    if(IS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Examples/${subdir} AND  EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/Examples/${subdir}/CMakeLists.txt)
        option(DicomViewer_BuildExample_${subdir} "Build ${child}" OFF)
        mark_as_advanced(DicomViewer_BuildExample_${subdir})
    endif()
endforeach()
add_subdirectory(Examples)